# Zephyr

./: .env  .gitignore  LICENSE  README.md  config.py  main.py  pyproject.toml  requirements.txt
cogs/: fun.py  info.py  moderation.py  utility.py
src/: fun.py  info.py
